Bug 6974 - rpcgen -a generate a fancy Makefile filename
Summary: rpcgen -a generate a fancy Makefile filename
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Ulrich Drepper
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-10-23 14:14 UTC by Aurelien Jarno
Modified: 2014-07-02 06:07 UTC (History)
1 user (show)

See Also:
Host: i686-pc-linux-gnu
Target: i686-pc-linux-gnu
Build: i686-pc-linux-gnu
Last reconfirmed:
fweimer: security-


Attachments
Patch to fix the problem (350 bytes, patch)
2008-10-23 14:15 UTC, Aurelien Jarno
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Aurelien Jarno 2008-10-23 14:14:51 UTC
Using rpcgen -a option to generate all files, the generated Makefile gets a
fancy filename
 
$ rpcgen -a test.x
$ ls Makefile.*
$ Makefile.test\177

Also if the filename used as an input as no extension, one gets a segfaults:
$ rpcgen -a test
$ Segmentation fault

A patch to fix the problem will follow.
Comment 1 Aurelien Jarno 2008-10-23 14:15:18 UTC
Created attachment 3020 [details]
Patch to fix the problem
Comment 2 Ulrich Drepper 2008-10-31 14:39:15 UTC
Fixed in cvs.
Comment 3 Aurelien Jarno 2008-11-02 21:59:39 UTC
This bug is still present in the CVS. The change is mentionned in the Changelog
file, but the fix hasn't been committed.
Comment 4 Ulrich Drepper 2008-11-03 07:48:30 UTC
.