localedata/tests-mbwc/dat_mbtowc.c
@@ -135,7 +135,7 @@ TST_MBTOWC tst_mbtowc_loc [] = {
 	  {
 	    { 0, 1, "\xfc\xe4\xf6",	MB_LEN_MAX },
 	    { 0, 1, "\177",	   	MB_LEN_MAX },
-	    { 0, 0, (char)NULL, 	MB_LEN_MAX },
+	    { 0, 0, NULL, 		MB_LEN_MAX },
 	  }
 	},
 	{
@@ -221,7 +221,7 @@ TST_MBTOWC tst_mbtowc_loc [] = {
 	  {
 	    { 0, 1, "ABC",	    MB_LEN_MAX },
 	    { 0, 1, "\177",	    MB_LEN_MAX },
-	    { 0, 0, (char)NULL, MB_LEN_MAX },
+	    { 0, 0, NULL,	    MB_LEN_MAX },
 	  }
 	},
 	{
@@ -305,7 +305,7 @@ TST_MBTOWC tst_mbtowc_loc [] = {
 	  {
 	    { 0, 1, "\244\242A",      MB_LEN_MAX },
 	    { 0, 1, "\177\244\242",   MB_LEN_MAX },
-	    { 0, 1, "",         MB_LEN_MAX },
+	    { 0, 1, "",		      MB_LEN_MAX },
 	  }
 	},
 	{
@@ -321,7 +321,7 @@ TST_MBTOWC tst_mbtowc_loc [] = {
 	  {
 	    { 0, 1, "\244\242A",      MB_LEN_MAX },
 	    { 0, 1, "\177\244\242",   MB_LEN_MAX },
-	    { 0, 0, (char)NULL, MB_LEN_MAX },
+	    { 0, 0, NULL,	      MB_LEN_MAX },
 	  }
 	},
 	{
